--- a/artcatalog/src/app/pages/database/database.component.scss
+++ b/artcatalog/src/app/pages/database/database.component.scss
@@ -17,6 +17,12 @@ h1.featured {
   color: rgba(0, 0, 0, 0.5);
 }
 
+img.search-icon {
+  width: 18px;
+  margin: auto;
+  stroke: white;
+}
+
 span.menu-item {
   padding: 1rem 0.5rem;
   display: inline-block;
