--- a/artcatalog/src/app/pages/home/home.component.html
+++ b/artcatalog/src/app/pages/home/home.component.html
@@ -259,7 +259,7 @@
           </div>
         </div>
         <div class="col-xl-3 col-md-3 col-sm-6 col-12 p-0 d-flex item-container m-auto">
-          <div class=" service-item">
+          <div class=" service-item" [routerLink]="['/calendar']">
             <img class="service-image" src="./assets/imgs/svg/Mask_Group_9.svg">
             <div class=" d-flex flex-row" style="margin: auto auto 2rem auto;">
             <span class="service-title" style="margin: auto ">Calendar</span>
