--- a/artcatalog/src/app/pages/calendar/calendar.component.html
+++ b/artcatalog/src/app/pages/calendar/calendar.component.html
@@ -1,3 +1,106 @@
-<p>
-  calendar works!
-</p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-12 col-md-12 col-sm-12 firstsection">
+      <div class="card">
+        <div class="card-body">
+          <div class="spacer-top">
+            <div class='app-calendar'>
+              <full-calendar
+                #calendar
+                [selectable]="calendarSelectable"
+                [header]="{
+                  left: 'prev,next today',
+                  center: 'title',
+                  right: 'dayGridMonth,timeGridWeek,timeGridDay,listWeek'
+                }"
+                [plugins]="calendarPlugins"
+                [weekends]="calendarWeekends"
+                [events]="calendarEvents"
+                (eventClick)="eventClick($event.event)"
+              ></full-calendar>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-12 col-md-12 col-sm-12 secondsection">
+      <div class="row">
+        <div class="col-lg-3 col-md-3 col-sm-6">
+          <button class="btn btn-outline-dark btn-lg">View Exhibitions</button>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-6">
+          <button class="btn btn-outline-dark btn-lg">View Lectures and Talks</button>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-6">
+          <button class="btn btn-outline-dark btn-lg">View Actions</button>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-6">
+          <button class="btn btn-outline-dark btn-lg">View Museum Events</button>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-12 col-md-12 col-sm-12 thirdsection">
+      <div class="row">
+        <div class="col-lg-6 col-md-6 col-sm-12s">
+          <div class="row">
+            <div class="col-lg-6 col-md-6 col-sm-12">
+              <div class="slidersection">
+                <ejs-slider #eventSlider id='minrange' [value]='value' [min]='min' [max]='max' [type]='type' [ticks]='ticks' [tooltip]='tooltip' (created)='onCreated()' (change)='onChange($event)' [orientation]='orientation'></ejs-slider>
+              </div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-12">
+              <div class="radiosection">
+                <div class="form-check" style="margin-bottom: .5em;">
+                  <label class="form-check-label" for="radio1">
+                    <input type="radio" class="form-check-input" id="radio1" name="optradio" value="option1"> <span style="padding-left: .5em;">Kilometers</span>
+                  </label>
+                </div>
+                <div class="form-check">
+                  <label class="form-check-label" for="radio2">
+                    <input type="radio" class="form-check-input" id="radio2" name="optradio" value="option2"> <span style="padding-left: .5em;">Miles</span>
+                  </label>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12">
+          <p></p>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-12 col-md-12 col-sm-12 forthsection">
+      <p></p>
+    </div>
+  </div>
+  <ng-template #modalContent let-close="close">
+    <div class="modal-header">
+      <h5 class="modal-title">Event Description</h5>
+    </div>
+    <div class="modal-body">
+      <div>
+        Title:
+        <pre>{{ modalData?.title }}</pre>
+      </div>
+      <div>
+        Museum Name:
+        <pre>{{ modalData?.museum }}</pre>
+      </div>
+      <div>
+        Start Date:
+        <pre>{{ modalData?.start }}</pre>
+      </div>
+      <div>
+        End Date:
+        <pre>{{ modalData?.end }}</pre>
+      </div>
+      <div>
+        Ticket Price:
+        <pre>{{ modalData?.tprice }}</pre>
+      </div>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-outline-secondary" (click)="close()">OK</button>
+    </div>
+  </ng-template>
+</div>
