--- a/artcatalog/src/styles.scss
+++ b/artcatalog/src/styles.scss
@@ -4,6 +4,17 @@ body {
   font-family: "Courier New";
   background-color: #F6EDE4;
 }
+@import '../node_modules/@fullcalendar/core/main.css';
+@import '../node_modules/@fullcalendar/daygrid/main.css';
+@import '../node_modules/@fullcalendar/timegrid/main.css';
+
+@import '../node_modules/@syncfusion/ej2-angular-inputs/styles/material.css';
+
+@import '../node_modules/@syncfusion/ej2-base/styles/material.css';
+
+@import '../node_modules/@syncfusion/ej2-buttons/styles/material.css';
+
+@import '../node_modules/@syncfusion/ej2-popups/styles/material.css';
 
 @font-face {
   font-family: "Courier New";
