--- a/src/app/pages/authors/authors.component.scss
+++ b/src/app/pages/authors/authors.component.scss
@@ -6,6 +6,11 @@ div.section-1 {
   }
 }
 
+.borderImage {
+  border: 1px solid #000000;
+  padding: 1px;
+}
+
 img.middle-img {
   filter: brightness(60%);
 }
@@ -327,6 +332,7 @@ div {
 
         span.block-name {
           font-size: 44px;
+          color: rgba(0, 0, 0, 0.5);
         }
       }
     }
