--- a/src/app/pages/calendar/calendar.component.scss
+++ b/src/app/pages/calendar/calendar.component.scss
@@ -70,7 +70,7 @@ pre {
   background-color: grey !important;
 }
 
-:host ::ng-deep div.fc-content {
+:host ::ng-deep a div.fc-content {
   cursor: pointer;
 }
 
