--- a/src/app/pages/database/database.component.html
+++ b/src/app/pages/database/database.component.html
@@ -7,6 +7,11 @@
             <input type="text" class="form-control looking-field" placeholder="What are you looking for?"
                    value="Choose location from the list.." aria-label="Recipient's username" aria-describedby="basic-addon2" id="dropdownMenuButton"
                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <div class="input-group-append">
+              <div class="search-icon-holder">
+                <img class="search-icon" src="./assets/imgs/svg/magnifying-glass.svg" alt="Search">
+              </div>
+            </div>
             <div class="dropdown-menu w-100 p-0" aria-labelledby="dropdownMenuButton">
               <a class="dropdown-item" (click)="getArtworksByLocation(location['id'])" *ngFor="let location of locations" >
                 <div class="d-flex w-100 flex-column">
@@ -87,22 +92,11 @@
   </div>
 </div>
 <div class="col-11 search-block" >
-    <div class="col-12 d-flex">
-      <div class="col-6">    
-        <input type="text" class="form-control looking-field" placeholder="What are you looking for?" aria-label="Recipient's username" aria-describedby="basic-addon2">
-      </div>
-      <div>
-        <button class="btn btn-default" routerLink="/database"><img class="search-icon" src="../../../assets/imgs/svg/magnifying-glass.svg" alt="Search"></button>
-      </div>
-      <div class="ml-auto p-2">
-          <button class="btn btn-default" id="sortType"><img class="search-icon" src="../../../assets/imgs/svg/direction.svg" alt="Search"></button>
-      </div>
-    </div>
-    <div class="col-12">
-      <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
         Advanced search
       </button>
-    </div>
+      <button id="sortType">Sort</button>
+
     <div class="accordion" id="accordionExample">
         <div class="card">
           <!-- <div class="card-header" id="headingOne">
