--- a/src/app/pages/museums/museums.component.scss
+++ b/src/app/pages/museums/museums.component.scss
@@ -47,12 +47,12 @@ div.map-container {
 }
 
 .image-container {
-  width: 300px;
+  width: 90%;
   height: 450px;
   margin: auto;
 }
 .image-card {
-  width: 300px;
+  width: 100%;
   height: 400px;
 }
 
@@ -64,66 +64,47 @@ div.map-container {
 }
 
 .image-title {
-  width: 300px;
+  width: 100%;
   height: 50px;
   margin: auto;
   text-align: center;
+  padding-top: 10px;
+}
+
+.seeall-section {
+  text-align: right;
+  margin-bottom: .75em;
+}
+
+.seeall-section a {
+  padding-right: 1.5%;
+  text-decoration: underline;
+  cursor: pointer;
+}
+.seeall-section a:hover {
+  color: lightseagreen;
+}
+
+.seeall-section a:active {
+  color: lightsalmon;
+}
+
+:host ::ng-deep ol.carousel-indicators {
+  display: none;
 }
 
 @media screen and (max-width: 610px) {
-  .image-container {
-    width: 85px;
-    height: 180px;
-  }
-  .image-card {
-    width: 85px;
-    height: 150px;
-  }
-  .image-title {
-    width: 85px;
-    height: 30px;
-    margin: auto;
-    text-align: center;
-  }
   h5 {
     font-size: 10px;
   }
 }
 @media screen and (max-width: 768px) and (min-width: 610px) {
-  .image-container {
-    width: 150px;
-    height: 230px;
-  }
-  .image-card {
-    width: 150px;
-    height: 200px;
-  }
-  .image-title {
-    width: 150px;
-    height: 30px;
-    margin: auto;
-    text-align: center;
-  }
   h5 {
     font-size: 13px;
   }
 }
- @media screen and (max-width: 1050px) and (min-width: 768px) {
-  .image-container {
-    width: 200px;
-    height: 340px;
-  }
-  .image-card {
-    width: 200px;
-    height: 300px;
-  }
-  .image-title {
-    width: 200px;
-    height: 40px;
-    margin: auto;
-    text-align: center;
-  }
-  h5 {
-    font-size: 17px;
-  }
- }
+@media screen and (max-width: 1050px) and (min-width: 768px) {
+h5 {
+  font-size: 17px;
+}
+}
