--- a/src/app/pages/calendar/calendar.component.scss
+++ b/src/app/pages/calendar/calendar.component.scss
@@ -70,10 +70,26 @@ pre {
   background-color: grey !important;
 }
 
-:host ::ng-deep a div.fc-content {
+.fc-event {
   cursor: pointer;
 }
 
 :host ::ng-deep span.e-tick-value.e-tick-after {
   background-color: red;
+}
+
+#state-button {
+  width: 100%;
+  margin-bottom: 5px;
+  font-size: 1.2em;
+}
+@media screen and (max-width: 1248px) and (min-width: 990px){
+  #state-button {
+    font-size: 0.85em;
+  }
+}
+@media screen and (max-width: 990px) {
+  #state-button {
+    font-size: 1.2em;
+  }
 }
